<resources>
    <string name="app_name">Koudou</string>
    <string name="login_title">Connexion</string>
    <string name="login_pseudo">Pseudo</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_connection_btn">Se connecter</string>
    <string name="login_register_btn">S\'inscrire</string>
    <string name="login_register">S\'inscrire</string>
    <string name="login_connect">Se connecter</string>
    <string name="title_activity_register">Register</string>
    <string name="login_confirm_password">Confirmation du mot de passe</string>
    <string name="login_email">Email</string>
    <string name="login_register_title">Inscription</string>
    <string name="confirm_title">Confirmation</string>
    <string name="confirm_option_true">Oui</string>
    <string name="confirm_option_false">Non</string>
    <string name="confirm_message_handler">Message de confirmation</string>
    <string name="member_menu">Membres</string>
    <string name="member_menu_description">Accéder à la gestion des membres</string>
    <string name="section_menu">Sections</string>
    <string name="section_menu_description">Accéder à la gestion des sections</string>
    <string name="profil_menu">Profil</string>
    <string name="profil_menu_description">Accéder à la gestion de son profil</string>
    <string name="login_profil_title">Mon profil</string>
    <string name="profil_change_password_btn">Modifier son mot de passe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="validate">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="password_change_new_password">Nouveau mot de passe</string>
    <string name="news_menu">Actualité</string>
    <string name="news_menu_description">Accéder à la gestion des actualités</string>
    <string name="news_title">Actualité</string>
    <string name="news_title_placeholder">Titre</string>
    <string name="news_content_placeholder">Contenu</string>
    <string name="news_author_placeholder">Auteur</string>
    <string name="news_date_placeholder">Date</string>
    <string name="sharedPreferences_token">koudou_prefs</string>
    <string name="main_error_placeholder">Erreur inconnue</string>
    <string name="error_back">Retour</string>
    <string name="profil_email_placeholder">Email</string>
    <string name="profil_pseudo_placeholder">Pseudo</string>
    <string name="profil_logout">Se déconnecter</string>
    <string name="menu_create">Créer</string>
    <string name="menu_delete">Supprimer</string>
    <string name="menu_details">Détails</string>
    <string name="member_firstname_placeholder">Prénom</string>
    <string name="member_lastname_placeholder">Nom</string>
    <string name="activity_title">Activités</string>
    <string name="member_menu_info_text">Infos</string>
    <string name="member_birthdate_placeholder">Date de naissance</string>
    <string name="member_comment_placeholder">Remarque</string>
    <string name="member_sex_placeholder">Sexe</string>
    <string name="members_title">Membres</string>
    <string name="member_form_sexe_placeholder">Sexe</string>
    <string name="error_authenticate_fail">Connexion échouée.</string>
    <string name="error_register_fail">Inscription échouée.</string>
    <string name="error_refresh_token_fail">Renouvellement de la connexion échouée.</string>
    <string name="error_password_change_fail">La modification du mot de passe a échouée.</string>
    <string name="error_member_get_fail">La récupération des membres a échouée.</string>
    <string name="error_member_getone_fail">La récupération de ce membre a échouée.</string>
    <string name="error_member_create_fail">La création de ce membre a échouée.</string>
    <string name="error_member_update_fail">La mise à jour de ce membre a échouée.</string>
    <string name="error_member_delete_fail">La supression de ce membre a échouée.</string>
    <string name="error_news_get_fail">La récupération des news a échouée.</string>
    <string name="error_news_getone_fail">La récupération de cette news a échouée.</string>
    <string name="error_news_create_fail">La création de cette news a échouée.</string>
    <string name="error_news_update_fail">La mise à jour de cette news a échouée.</string>
    <string name="error_news_delete_fail">La supression de cette news a échouée.</string>
    <string name="valid_pseudo_required">Le pseudo est obligatoire.</string>
    <string name="valid_password_required">Le mot de passe est obligatoire.</string>
    <string name="valid_new_password_required">Le nouveau mot de passe est obligatoire.</string>
    <string name="valid_password_complexity">Le mot de passe doit contenir au moins : 8 caractères, une majuscule, une minuscule et un chiffre.</string>
    <string name="valid_password_confirm_required">La confirmation du mot de passe est obligatoire.</string>
    <string name="success_password_modify">Mot de passe modifié.</string>
    <string name="valid_email_required">L\'email est obligatoire.</string>
    <string name="valid_email_format">Le format email n\'est pas respecté.</string>
    <string name="valid_password_same_new_password">La confirmation du mot de passe n\'est pas égale au mot de passe.</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_create">Créer</string>
    <string name="action_update">Éditer</string>
    <string name="action_details">Détails</string>
    <string name="action_cancel">Annuler</string>
    <string name="action_save">Sauver</string>
    <string name="action_back">Retour</string>
    <string name="success_member_create">Membre créé</string>
    <string name="success_member_update">Membre mise à jour</string>
    <string name="success_member_delete">Membre supprimé</string>
    <string name="confirm_member_delete">Voulez-vous vraiment supprimer ce membre ?</string>
    <string name="hint_member_select">Sélectionner d\'abord un membre</string>
    <string name="valid_lastname_required">Le nom est obligatoire.</string>
    <string name="valid_firstname_required">Le prénom est obligatoire.</string>
    <string name="valid_birthdate_format">La date de naissance doit être au format jj/mm/aaaa.</string>
    <string name="valid_title_required">Le titre est obligatoire.</string>
    <string name="valid_content_required">Le contenu est obligatoire.</string>
    <string name="hint_news_select">Sélectionner d\'abord une news</string>
    <string name="confirm_news_delete">Voulez-vous vraiment supprimer cette news ?</string>
    <string name="error_connection_fail">La connexion a échouée</string>
    <string name="error_app_unavailable_internet">La connection internet est indisponible</string>
    <string name="error_app_unavailable_api">Le serveur est injoignable</string>
    <string name="error_app_api">Le serveur a rencontré une erreur</string>
    <string name="error_app_unknown">Une erreur inconnue a été rencontrée</string>
    <string name="success_news_create">News créée</string>
    <string name="success_news_update">News mise à jour</string>
    <string name="success_news_delete">News supprimée</string>
</resources>