<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.CreateNewsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/news_title"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/news_title_placeholder"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/news_content"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/news_content_placeholder"
        app:layout_constraintTop_toBottomOf="@id/news_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/news_confirm"
        style="@style/KoudouButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_content" />
    <Button
        android:id="@+id/news_cancel"
        style="@style/KoudouButtonOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>