<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".views.LoginActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/confirm_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/confirmation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="200dp"
        android:text="@string/confirm_message_handler"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
    <Button
        android:id="@+id/confirm_button_false"
        style="@style/KoudouButtonOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_option_false"
        app:layout_constraintEnd_toStartOf="@id/confirm_button_true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_message" />
    <Button
        android:id="@+id/confirm_button_true"
        style="@style/KoudouButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_option_true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirm_button_false"
        app:layout_constraintTop_toBottomOf="@id/confirmation_message" />
</androidx.constraintlayout.widget.ConstraintLayout>