<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".views.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/login_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_pseudo"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_pseudo"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:layout_editor_absoluteX="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pseudo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        app:layout_constraintEnd_toEndOf="@+id/login_pseudo"
        app:layout_constraintStart_toStartOf="@+id/login_pseudo"
        app:layout_constraintTop_toBottomOf="@id/login_pseudo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_text"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_connect_btn"
        style="@style/KoudouButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_connect"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@id/login_password" />

    <Button
        android:id="@+id/login_register_switch_btn"
        style="@style/KoudouButtonOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_connect_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>