<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.ModifyPasswordFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modify_password_password"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/modify_password_password_text"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modify_password_new_password"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_change_new_password"
        app:layout_constraintTop_toBottomOf="@id/modify_password_password"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/modify_password_new_password_text"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modify_password_confirm_password"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/modify_password_new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/modify_password_confirm_password_text"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/modify_password_confirm"
        style="@style/KoudouButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modify_password_confirm_password" />
    <Button
        android:id="@+id/modify_password_cancel"
        style="@style/KoudouButtonOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modify_password_confirm" />
</androidx.constraintlayout.widget.ConstraintLayout>