<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.member.MemberFormInfosFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/member_form_lastname"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/member_lastname_placeholder"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/member_form_lastname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/member_form_firstname"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/member_firstname_placeholder"
        app:layout_constraintTop_toBottomOf="@id/member_form_lastname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/member_form_firstname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/member_form_birthdate"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/member_birthdate_placeholder"
        app:layout_constraintTop_toBottomOf="@id/member_form_firstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/member_form_birthdate_text"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:orientation="vertical"
        android:id="@+id/member_form_sex"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/member_form_birthdate"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/member_form_sexe_placeholder"
        android:layout_marginHorizontal="20dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:background="@color/field_back"
        />

        <Spinner
            android:id="@+id/member_form_sex_text"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@color/field_back"
            android:minHeight="50dp"
            tools:layout_editor_absoluteX="20dp" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/member_form_comment"
        style="@style/KoudouTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/member_comment_placeholder"
        app:layout_constraintTop_toBottomOf="@id/member_form_sex">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/member_form_comment_text"
            android:minHeight="100dp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>